crates/tepra/tests/snapshots/askama_render__printer_detail_offline.snap
---
source: crates/tepra/tests/askama_render.rs
expression: html
---

<!doctype html>
<html lang="ja" data-theme="corporate">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>QL-800 — TEPRA Creator</title>
  <link rel="stylesheet" href="/static/app.css">
  <script src="/static/htmx.min.js" defer></script>
</head>
<body class="min-h-screen bg-base-200">
  <a href="#main" class="sr-only focus:not-sr-only focus:absolute focus:top-2 focus:left-2 btn btn-sm">
    コンテンツへスキップ
  </a>

  <div class="drawer lg:drawer-open">
    <input id="drawer-toggle" type="checkbox" class="drawer-toggle" />

    <div class="drawer-content flex flex-col">
      <div class="navbar bg-base-100 shadow-sm">
        <div class="flex-none lg:hidden">
          <label for="drawer-toggle" class="btn btn-square btn-ghost" aria-label="メニューを開く">
            <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
              <path d="M4 6h16M4 12h16M4 18h16"/>
            </svg>
          </label>
        </div>
        <div class="flex-1 px-2">
          <a class="btn btn-ghost text-xl" href="/">TEPRA Creator</a>
        </div>
      </div>

      <main id="main" tabindex="-1" class="flex-1 p-4">
        
  

  <h1 class="text-2xl font-bold mb-4">QL-800</h1>

  <div class="badge badge-error">
    オフライン
  </div>

      </main>
    </div>

    <div class="drawer-side">
      <label for="drawer-toggle" aria-label="メニューを閉じる" class="drawer-overlay"></label>
      <ul class="menu bg-base-200 min-h-full w-56 p-4 gap-1">
        <li><a href="/ui/">プリンター一覧</a></li>
      </ul>
    </div>
  </div>

  <div id="toast-container" class="toast toast-top toast-end z-50"
       aria-live="polite" aria-atomic="true"></div>
</body>
</html>
